feat: implementar sistema de preferências do usuário e refatorar changelog
  Adiciona sistema completo de preferências de usuário:
  - Cria tabela userPreferences no schema com campos disableMagnetlines, periodMonthsBefore e periodMonthsAfter
  - Implementa página de Ajustes com abas (Preferências, Alterar nome, Senha, E-mail, Deletar conta)
  - Adiciona componente PreferencesForm para configuração de magnetlines e períodos de exibição
  - Propaga periodPreferences para todos os componentes de lançamentos e calendário

  Refatora sistema de changelog:
  - Remove implementação anterior baseada em JSON estático
  - Adiciona nova página de changelog dinâmica em app/(dashboard)/changelog
  - Adiciona componente changelog-list.tsx
  - Remove arquivos obsoletos (changelog-notification, actions, data, utils, scripts)

  Adiciona controle de saldo inicial em contas:
  - Novo campo excludeInitialBalanceFromIncome em contas
  - Permite excluir saldo inicial do cálculo de receitas
  - Atualiza queries de lançamentos para respeitar esta configuração

  Melhorias adicionais:
  - Adiciona componente ui/accordion.tsx do shadcn/ui
  - Refatora formatPeriodLabel para displayPeriod centralizado
  - Propaga estabelecimentos para componentes de lançamentos
  - Remove variável DB_PROVIDER obsoleta do .env.example e documentação
  - Adiciona 6 migrações de banco de dados (0003-0008)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,11 @@ name: opensheets
 
 # MODOS DE USO:
 # 1. Banco LOCAL (PostgreSQL em container):
-#    - Configure DB_PROVIDER=local no .env
+#    - Configure DATABASE_URL com host "db" no .env
 #    - Execute: docker compose up --build
 #
 # 2. Banco REMOTO (ex: Supabase):
-#    - Configure DB_PROVIDER=remote no .env
-#    - Configure DATABASE_URL com a URL do banco remoto
+#    - Configure DATABASE_URL com a URL do banco remoto no .env
 #    - Execute: docker compose up app --build (apenas o serviço app)
 #
 # 3. Para parar todos os serviços:
@@ -81,9 +80,9 @@ services:
       # Variáveis de ambiente da aplicação
       NODE_ENV: production
 
-      # DATABASE_URL será definida dinamicamente baseada em DB_PROVIDER
-      # Se DB_PROVIDER=local, usa o serviço 'db'
-      # Se DB_PROVIDER=remote, usa a DATABASE_URL do .env
+      # DATABASE_URL do .env
+      # Banco local: use host "db" (serviço Docker)
+      # Banco remoto: use a URL completa do provider
       DATABASE_URL: ${DATABASE_URL}
 
       # Outras variáveis de ambiente necessárias
