--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "dev-env": "tsx scripts/dev.ts",
-    "prebuild": "tsx scripts/generate-changelog.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -32,6 +31,7 @@
     "@ai-sdk/google": "^3.0.1",
     "@ai-sdk/openai": "^3.0.1",
     "@openrouter/ai-sdk-provider": "^1.5.4",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-avatar": "1.1.11",
     "@radix-ui/react-checkbox": "1.3.3",
@@ -52,7 +52,7 @@
     "@radix-ui/react-toggle": "1.1.10",
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
-    "@remixicon/react": "4.7.0",
+    "@remixicon/react": "4.8.0",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
